--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ imxrt-iomuxc-build = { version = "0.1.0", path = "imxrt-iomuxc-build" }
 
 [features]
 imxrt106x = []
+imxrt101x = []
 
 [package.metadata.docs.rs]
 all-features = true
@@ -29,3 +30,4 @@ rustdoc-args = ["--cfg", "docsrs"]
 members = [
     "imxrt-iomuxc-build"
 ]
+
